2015-09-23  Kirit Saelensminde  <kirit@felspar.com>
 Added ChangeLog