@@ -19,6 +19,7 @@
                 "database": "FSL_BMF_Django_04",
                 "sql": [
                     {
+                        "return": "object",
                         "path": [1],
                         "GET": "SELECT * FROM auth_user WHERE id=$1"
                     },
@@ -59,7 +60,7 @@
                 "database": "bmf-dd",
                 "sql": [
                     {
-                        "process": "object",
+                        "return": "object",
                         "path": [1],
                         "GET": "SELECT '/fostgres/ddservice/package/contract_type/' || id AS \"@id\",  *
                                 FROM package_contracttype WHERE id=$1"
