@@ -16,9 +16,18 @@
 namespace fostgres {
 
 
-    /// Turn response data into an actual response
-    std::pair<boost::shared_ptr<fostlib::mime>, int>  response(
-        const fostlib::json &config, const fostlib::json &data);
+    /// Responder function
+    using responder_function = std::function<
+        std::pair<boost::shared_ptr<fostlib::mime>, int>
+            (const fostlib::json &config,
+                std::pair<std::vector<fostlib::string>, fostlib::pg::recordset>&&)>;
+
+
+    /// Register a responder with a const instance of this class
+    struct responder{
+        responder(fostlib::string name, responder_function);
+    };
+
 
     /// Turn response data into an actual response taking into account the accept header
     std::pair<boost::shared_ptr<fostlib::mime>, int>  response(
@@ -32,6 +41,10 @@ namespace fostgres {
         std::pair<std::vector<fostlib::string>, fostlib::pg::recordset>&&);
     /// Turn the response data into CSJ no matter the accept header
     std::pair<boost::shared_ptr<fostlib::mime>, int>  response_csj(
+        const fostlib::json &config,
+        std::pair<std::vector<fostlib::string>, fostlib::pg::recordset>&&);
+    /// Turn the response data into a JSON object no matter the accept header
+    std::pair<boost::shared_ptr<fostlib::mime>, int>  response_object(
         const fostlib::json &config,
         std::pair<std::vector<fostlib::string>, fostlib::pg::recordset>&&);
 
